@@ -77,26 +77,32 @@
 		<p>###LLOPTIONS###</p>
 		<form id="t3-install-123-step3" method="post" action="###ACTION###">
 			<fieldset>
-				<ol>
+				<ul>
 					<li class="t3-install-hidden">
 						<input type="hidden" value="###STEP###" name="step" />
 					</li>
 					<li>
-						<label for="t3-install-123-newdatabase">###LLOPTION1###</label>
-						<p>###LLREMARK1###</p>
-						<input id="t3-install-123-newdatabase" class="t3-install-form-input-text" type="text" name="TYPO3_INSTALL[localconf.php][NEW_DATABASE_NAME]" />
+						<input type="radio" name="TYPO3_INSTALL[db_select_option]" id="t3-install-form-db-select-new" value="NEW" checked="checked" class="radio" />
+						<div>
+							<label for="t3-install-123-newdatabase">###LLOPTION1###</label>
+							<p>###LLREMARK1###</p>
+							<input id="t3-install-123-newdatabase" class="t3-install-form-input-text" type="text" name="TYPO3_INSTALL[localconf.php][NEW_DATABASE_NAME]" onchange="this.form.db_select_option[0].checked=true" />
+						</div>
 					</li>
 					<li>
-						<label for="t3-install-123-database">###LLOPTION2###</label>
-						<p>###LLREMARK2###</p>
-						<select id="t3-install-123-database" name="TYPO3_INSTALL[localconf.php][typo_db]">
-							<option value="">Select database</option>
-							<!-- ###DATABASEOPTIONS### begin -->
-							<option value="###DATABASEVALUE###" ###DATABASESELECTED###>###DATABASENAME###</option>
-							<!-- ###DATABASEOPTIONS### end -->
-						</select>
+						<input type="radio" name="TYPO3_INSTALL[db_select_option]" id="t3-install-form-db-select-existing" value="EXISTING" class="radio" />
+						<div>
+							<label for="t3-install-123-database">###LLOPTION2###</label>
+							<p>###LLREMARK2###</p>
+							<select id="t3-install-123-database" name="TYPO3_INSTALL[localconf.php][typo_db]" onchange="this.form.db_select_option[1].checked=true">
+								<option value="">Select database</option>
+								<!-- ###DATABASEOPTIONS### begin -->
+								<option value="###DATABASEVALUE###" ###DATABASESELECTED###>###DATABASENAME###</option>
+								<!-- ###DATABASEOPTIONS### end -->
+							</select>
+						</div>
 					</li>
-				</ol>
+				</ul>
 			</fieldset>
 			<fieldset class="t3-install-form-submit">
 				<ol>
